syntax = "proto3";

package command;

option go_package = "github.com/casbin/hraft-dispatcher/command";

message StringArray {
  repeated string items = 1;
}

message AddPoliciesRequest {
  string sec = 1;
  string pType = 2;
  repeated StringArray rules = 3;
}

message RemovePoliciesRequest {
  string sec = 1;
  string pType = 2;
  repeated StringArray rules = 3;
}

message RemoveFilteredPolicyRequest {
  string sec = 1;
  string pType = 2;
  int32  fieldIndex = 3;
  repeated string fieldValues = 4;
}

message UpdatePolicyRequest {
  string sec = 1;
  string pType = 2;
  repeated string newRule = 3;
  repeated string oldRule = 4;
}

message UpdatePoliciesRequest {
  string sec = 1;
  string pType = 2;
  repeated StringArray newRules = 3;
  repeated StringArray oldRules = 4;
}

message Command {
  enum Type {
    COMMAND_TYPE_ADD_POLICIES = 0;
    COMMAND_TYPE_REMOVE_POLICIES = 1;
    COMMAND_TYPE_REMOVE_FILTERED_POLICY = 2;
    COMMAND_TYPE_UPDATE_POLICY = 3;
    COMMAND_TYPE_UPDATE_POLICIES = 4;

    COMMAND_TYPE_CLEAR_POLICY = 5;
  }

  Type type = 1;
  bytes data = 2;
}

message AddNodeRequest {
  string id = 1;
  string address = 2;
}

message RemoveNodeRequest {
  string id = 1;
}